se agregan textos al proyecto

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 que sea rock
+ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis dolorum quasi porro fugiat excepturi doloremque reiciendis voluptatibus. Facilis repudiandae, maiores aspernatur tempore pariatur sint fugiat nulla, quod modi ipsa dolores?
+ Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ipsum voluptatum iusto sequi placeat enim nostrum veritatis numquam recusandae aliquid quas similique, consequatur iste commodi inventore, repudiandae pariatur voluptate fuga.
+ Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam facilis corporis suscipit fugiat reiciendis temporibus reprehenderit optio blanditiis in rem, ex eius omnis nisi fugit odit enim quae labore et!
+ Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo unde perferendis, labore dolorem incidunt nam voluptate ad molestiae tempore non sed sit quaerat accusamus molestias enim ab veniam neque natus.
